fix overlap problem

--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -2,6 +2,7 @@
 body {
   background: black;
   position: relative;
+  margin:0;
 }
 
 
@@ -66,7 +67,13 @@ body {
   left: 0%;
 }
 
+#page {
+  position: absolute;
+  top:0px;
+  left: 0%;
 
+
+}
 
 #tablepath {
   display: none;
@@ -198,7 +205,12 @@ body {
   position: absolute;
   top:0px;
   left: 0px;
+}
 
+.svgmap {
+  position: absolute;
+  top:0px;
+  left: 0px;
 }
 
 .mycanvas  {
